2013-10-10  Johannes Ranke<jranke@uni-bremen.de> for mkin (0.9-22)

	* Show the weighting method for residuals in the summary
	* Correct the output of the data in the case of manual weighting


2013-10-09  Johannes Ranke <jranke@uni-bremen.de> for mkin (0.9-22)

  * Do not use 0 values at time zero for chi2 error level calculations.
    This is the way it is done in KinGUII and it makes sense


Changes performed in earlier versions are documented in the subversion log
files on R-Forge http://www.r-forge.r-project.org/scm/?group_id=615
vim: set expandtab ts=2 sw=2: